try patch build.gradle